; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_hu_stuff.c_ForeignTranslation.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_hu_stuff.c_ForeignTranslation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@frenchKeyMap = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local signext i8 @ForeignTranslation(i8 zeroext %0) #0 {
  %2 = alloca i8, align 1
  store i8 %0, i8* %2, align 1
  %3 = load i8, i8* %2, align 1
  %4 = zext i8 %3 to i32
  %5 = icmp slt i32 %4, 128
  br i1 %5, label %6, label %13

6:                                                ; preds = %1
  %7 = load i8*, i8** @frenchKeyMap, align 8
  %8 = load i8, i8* %2, align 1
  %9 = zext i8 %8 to i64
  %10 = getelementptr inbounds i8, i8* %7, i64 %9
  %11 = load i8, i8* %10, align 1
  %12 = sext i8 %11 to i32
  br label %16

13:                                               ; preds = %1
  %14 = load i8, i8* %2, align 1
  %15 = zext i8 %14 to i32
  br label %16

16:                                               ; preds = %13, %6
  %17 = phi i32 [ %12, %6 ], [ %15, %13 ]
  %18 = trunc i32 %17 to i8
  ret i8 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
